@@ -3,6 +3,7 @@ package com.perfectworldprogramming.mobile.orm.test.interfaces;
 import java.util.ArrayList;
 import java.util.List;
 
+import android.test.ActivityInstrumentationTestCase2;
 
 import com.perfectworldprogramming.mobile.orm.AndroidSQLiteTemplate;
 import com.perfectworldprogramming.mobile.orm.helper.DBHelper;
@@ -10,8 +11,6 @@ import com.perfectworldprogramming.mobile.orm.test.Main;
 import com.perfectworldprogramming.mobile.orm.test.domain.Account;
 import com.perfectworldprogramming.mobile.orm.test.domain.Address;
 import com.perfectworldprogramming.mobile.orm.test.domain.Person;
-
-import android.test.ActivityInstrumentationTestCase2;
 
 /**
  * User: Mark Spritzler
@@ -32,24 +31,25 @@ public class CursorExtractorTests extends ActivityInstrumentationTestCase2<Main>
 
     @SuppressWarnings("unchecked")
 	public void setUp() {
-    	try {
-			super.setUp();
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
 		helper = new DBHelper(this.getInstrumentation().getContext(), new Class[]{Person.class, Address.class, Account.class}, "ormtest", 3);
         template = new AndroidSQLiteTemplate(helper.getSqlLiteDatabase());
         SampleDataHelper.addDataToDatabase(template);
+    }
+    
+    @Override
+    protected void tearDown() throws Exception
+    {
+        helper.cleanup();
     }
 
     public void testSuccessfulPersonExtractor() {
         String sql = "SELECT * from PERSON p, ADDRESS a where a.PERSON_ID = p.PERSON_ID and p.FIRST_NAME = '?'";
         Person person = template.queryForObject(sql, new PersonCursorExtractor(), "John");
         assertNotNull(person);
-        assertEquals(new Integer(42), person.getAge());
+        assertEquals(Integer.valueOf(42), person.getAge());
         assertEquals("John", person.getFirstName());
         assertEquals("Doe", person.getLastName());
-        assertEquals(new Double("5.1d"), person.getHeight());
+        assertEquals(Double.valueOf("5.1d"), person.getHeight());
         List<Address> addresses = person.getAddresses();
         assertNotNull(addresses);
         assertEquals(2, addresses.size());
@@ -65,9 +65,9 @@ public class CursorExtractorTests extends ActivityInstrumentationTestCase2<Main>
         assertEquals("12345", address.getZipCode());
         Person person = address.getPerson();
         assertNotNull(person);
-        assertEquals(new Integer(42), person.getAge());
+        assertEquals(Integer.valueOf(42), person.getAge());
         assertEquals("John", person.getFirstName());
         assertEquals("Doe", person.getLastName());
-        assertEquals(new Double("5.1d"), person.getHeight());
+        assertEquals(Double.valueOf("5.1d"), person.getHeight());
     }
 }
